--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,12 +18,12 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          output: dist/snake.svg?palette=github-dark
+          outputs: snake.svg?palette=github-dark   # ← changed here
 
       - name: Push snake.svg to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: .     # ← changed here
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
